--- a/styles/cats.css
+++ b/styles/cats.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
 }
 
-body, input, textarea {
+body, input, textarea, select, option {
     background-color: #131215;
     color: #fff;
     font-family: 'Montserrat', sans-serif;
@@ -171,143 +171,80 @@ body, input, textarea {
     }
 }
 
-.carousel-container {
-    position: relative;
-    margin: 0 auto;
-    width: 89%;
-    overflow-x: hidden;
-
-    .carousel {
-        display: flex;
-        transition: transform 0.5s ease-in-out;
-    }
-    .carousel .carousel-image {
-        min-width: 100%;
-        height: auto;
-    }
-    .carousel-button {
-        position: absolute;
-        top: 45%;
-        background-color: rgba(0, 0, 0, 0.5);
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        color: white;
-        border: none;
-        cursor: pointer;
-        font-size: 50px;
-        border-radius: 50%;
-    }
-    .prev {
-        left: 10px;
-    }
-    .next {
-        right: 10px;
-    }
-    .carousel-button:hover {
-        background-color: rgba(0, 0, 0, 0.8);
-    }
-}
-
-
 main {
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
+    align-items: center;
     margin-top: 50px;
+    gap: 150px;
 
-    section {
+    .container {
         display: flex;
-        padding: 16px 20px;
         flex-direction: column;
         align-items: center;
-        background-color: #4C4D4F;
-        border-radius: 20px;
-        width: 600px;
-        gap: 30px;
+        justify-content: center;
+
+        .titles {
+            text-align: center;
+            margin-bottom: 35px;
+        }
+    
+        .card-item {
+            padding: 20px;
+            border-radius: 10px;
+            height: fit-content;
+            width: 350px;
+            margin-bottom: 30px;
+            box-shadow: 0 5px 25px #53525271;
+            background-color: #2C2C2F;
+            text-align: center;
+            img {
+                width: 250px;
+            }
+            p {
+                font-size: 20px;
+                margin: 15px;
+            }
+
+            button {
+                border: none;
+                outline: none;
+                padding: 15px;
+                text-align: center;
+                text-decoration: none;
+                font-family: 'Montserrat', sans-serif;
+                background-color: #855EEE;
+                font-size: 18px;
+                width: 100%;
+                border-radius: 8px;
+                color: #fff;
+                cursor: pointer;
+            }
+            button:hover {
+                background-color: #5e35ce;
+                box-shadow: 0px 0px 50px #845eee85;
+            }
+        }
     }
-    section > div {
-        display: flex;
-        gap: 20px;
-    }
-    section > div > a {
-        color: #fff;
-        cursor: pointer;
-        display: flex;
-        text-align: center;
-        flex-direction: column;
-        align-items: center;
-    }
-    section > div > a:hover {
-        color: #855EEE;
-    }
-    section > div > a img {
-        width: 80px;
-    }
-    section > div > a p {
-        font-family: 'Paytone One', sans-serif;
-        font-size: 13px;
-        text-align: center;
+
+
+    .banner-wash {
+        width: 550px;
         overflow: hidden;
-        text-overflow: clip;
-    }
-    section > img {
-        width: 420px;
-        margin-top: -30px;
+        border-radius: 20px;
+        border: 5px solid #5e35ce;
+
+        img {
+            width: 100%;
+        }
     }
 }
 
 footer {
-    padding: 18px 25px;
-    margin-top: 50px;
-    background-color: #1C1C1E;
-
     display: flex;
     justify-content: space-between;
-
-    .footer-left {
-        display: flex;
-        flex-direction: column;
-        gap: 15px;
-        font-size: 14px;
-    }
-    .footer-left .box-logo {
-        color: #fff;
-        text-decoration: none;
-        display: flex;
-        align-items: center;
-        gap: 10px;
-        font-size: 20px;
-        font-family: "Paytone One";
-    }
-    .footer-left .box-logo img {
-        width: 35px;
-    }
-    .footer-left a {
-        color: #fff;
-        width: fit-content;
-    }
-    .footer-left a:hover {
-        color: #855EEE;
-    }
-    .footer-left .info {
-        display: flex;
-        flex-direction: column;
-        color: #7E7E7E;
-    }
-
-    .divider {
-        display: flex;
-        border-left: 1px solid #fff;
-    }
-
-    .footer-right {
-        display: flex;
-        flex-direction: column;
-        gap: 15px;
-        font-size: 14px;
-    }
-    .footer-right div {
-        display: flex;
-        justify-content: space-between;
-    }
+    opacity: 50%;
+    z-index: -1;
+    pointer-events: none;
+    user-select: none;
 }
